# battery-health

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  battery-health-plot  main.cpp  makefile  submit-battery-status  submit.php  upower-plot
